Updated patches task notebook

--- a/silda-patches.ipynb
+++ b/silda-patches.ipynb
@@ -93,8 +93,8 @@
     }
    ],
    "source": [
-    "# Show patches from the first 3 points \n",
-    "for k in range(3):\n",
+    "# Show patches from the first 5 points \n",
+    "for k in range(5):\n",
     "    p = vis_patches(patches,points_idxs[k])\n",
     "    plt.imshow(p)\n",
     "    plt.axis('off')\n",
@@ -119,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 28678/278583 [01:27<12:32, 332.30it/s]"
+      "100%|██████████| 278583/278583 [12:50<00:00, 361.63it/s]\n"
      ]
     }
    ],
@@ -169,9 +169,9 @@
     "AUTHOR_EMAIL = \"jack@descriptors.com\"\n",
     "```\n",
     "\n",
-    "Finally, please upload the resulting `.h5` file at https://www.dropbox.com/request/1Mu1YX8gj9G6lcHzjobX?oref=e\n",
+    "Finally, please upload the resulting `.h5` file [using this link](https://www.dropbox.com/request/kQIIcRCWUwBTxRSpJVHo?oref=e)\n",
     "\n",
-    "If for any reason the above link does not work, or you cannot access it please send an email to vassileios@scape.io"
+    "If for any reason the above link does not work, or you cannot access it please send an email to [vassileios@scape.io](mailto:vassileios@scape.io)"
    ]
   },
   {
