--- a/silda-patches.ipynb
+++ b/silda-patches.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "### Extracting descriptors from SILDa patches\n",
     "\n",
-    "This assumes that the data are already downloaded. If not, please run `sh download.sh`from the command line.  \n",
+    "This assumes that the data are already downloaded. If not, please run \n",
+    "```bash\n",
+    "sh download.sh\n",
+    "```\n",
+    "\n",
     "The `readme.md` file provides more information."
    ]
   },
