--- a/silda-patches.ipynb
+++ b/silda-patches.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "### Extracting descriptors from SILDa patches\n",
     "\n",
-    "This assumes that the data are already downloaded. If not, please run \n",
+    "This assumes that the data are already downloaded. If not, please run in a terminal\n",
     "```bash\n",
     "sh download.sh\n",
     "```\n",
     "\n",
-    "The `readme.md` file provides more information."
+    "More details on the `readme.md`."
    ]
   },
   {
