Added the notebook for the matching task. Updated download.sh
- download.sh now gets all SILDa data
- matching notebook is added

--- a/silda-local-patches.ipynb
+++ b/silda-local-patches.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extracting descriptors from SILDa patches\n",
+    "# Extracting descriptors from SILDa patches\n",
     "\n",
     "This assumes that the data are already downloaded. If not, please run in a terminal\n",
     "```bash\n",
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "# Load the patches, and get a list of the point indices\n",
-    "patches = h5py.File('./data/silda-dataset/patches.h5', 'r')\n",
+    "patches = h5py.File('./data/SILDa/patches.h5', 'r')\n",
     "points_idxs = [x for x in list(patches.keys()) if \"spherical\" not in x]"
    ]
   },
