Updated building recognition notebook & readme.

--- a/silda-camera-poses.ipynb
+++ b/silda-camera-poses.ipynb
@@ -26,6 +26,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting the camera poses of the train images\n",
+    "We provide the GT poses of the $8344$ images that are in the train set. These can be used as training labels for getting the poses of the query images, e.g. using a `PoseNet`-style approach."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_imgs = [line.strip().split() for line in open(\"./data/SILDa/silda-train-poses.txt\", 'r')]\n",
+    "train_imgs_poses = {}\n",
+    "for img_pose in train_imgs:\n",
+    "    train_imgs_poses[img_pose[0]] = np.array(img_pose[1:8], dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Camera poses of the query images"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
